# Cryptography-and-cryptanalysis

./: .gitignore  Cargo.toml  LICENSE
.cargo/: config.toml
docs/: KIK_1ID24B_LAB_1_BABIARSKI_JAKUB_CHOJNACKI_JAN.md  README.md
docs/Sprawozdania/: KIK_1ID24B_LAB_1_BABIARSKI_JAKUB_CHOJNACKI_JAN.md  KIK_1ID24B_LAB_2_BABIARSKI_JAKUB_CHOJNACKI_JAN.md
src/: args.rs  attacks.rs  converters.rs  file_handling.rs  file_parsers.rs  generators.rs  histogram_generator.rs  input_parser.rs  key_parser.rs  main.rs  ngram_generator.rs  ngram_parser.rs  operating_mode.rs  operations.rs  validate_paths.rs
src/algorithms/: affine.rs  input_parser.rs  mod.rs  substitution.rs  transposition.rs
src/algorithms/affine/: generate_affine_decrypt_key.rs  generate_affine_encrypt_key.rs  handle_decrypt.rs  handle_encrypt.rs  mod.rs
src/algorithms/substitution/: handle_decrypt.rs  handle_encrypt.rs  key_parser.rs  mod.rs  string_to_key.rs
src/algorithms/transposition/: generate_transposition_key.rs  handle_decrypt.rs  handle_encrypt.rs  mod.rs
src/algorithms/util/: mod.rs  substitute.rs
src/analysis/: fast_ngram_generator.rs  fast_ngram_parser.rs  fast_substitute.rs  mod.rs  p.rs  pl.rs  pl_pre_log.rs  precompute_ref_log.rs  roll_key.rs
src/analysis/metropolis_hastings/: substitution.rs
src/attack/: mod.rs  x2test.rs
src/attack/bruteforce/: affine.rs  mod.rs  transposition.rs
src/ngram/: histogram_generator.rs  histogram_parser.rs  mod.rs  ngram_generator.rs  ngram_parser.rs  ngram_to_string.rs
