[package]
name = "Cryptography-and-cryptanalysis"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = 1
#panic = "abort"
#strip = "symbols"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
statrs = "0.18.0"
gcd = "2.3.0"
bare_metal_modulo = "1.2.5"
rayon = "1.11.0"
rand = "0.9.2"
fast-math = "0.1.1"